Implement visual social distancing + bugfixes + stroke disabled

--- a/epidemicSimulatorV2/data/settings.json
+++ b/epidemicSimulatorV2/data/settings.json
@@ -1,20 +1,20 @@
 {
   "MEAN": "3",
-  "sDistance": "5",
-  "sToughness": "90",
+  "sDistance": "4",
+  "sToughness": "100",
   "deathChance": "30",
   "renderEngine": false,
-  "susceptibleNum": "100",
+  "susceptibleNum": "87",
   "angleChange": "20",
   "recChance": "50",
   "fixedSpeed": "1",
-  "disableGraphs": false,
-  "socialDist": false,
+  "disableGraphs": true,
+  "socialDist": true,
   "renderLen": "10",
-  "infectedNum": "20",
+  "infectedNum": "22",
   "agentSize": "10",
-  "gaussMov": false,
+  "gaussMov": true,
   "STD_DEV": "1",
-  "sReaction": "8",
+  "sReaction": "3",
   "infChance": "50"
 }
