Move UI code inside class

--- a/epidemicSimulatorV2/data/settings.json
+++ b/epidemicSimulatorV2/data/settings.json
@@ -1,20 +1,22 @@
 {
   "MEAN": "3",
-  "sDistance": "4",
-  "sToughness": "100",
+  "sDistance": "2",
+  "sToughness": "50",
   "deathChance": "30",
   "renderEngine": false,
-  "susceptibleNum": "87",
-  "angleChange": "20",
+  "susceptibleNum": "380",
+  "angleChange": "10",
   "recChance": "50",
   "fixedSpeed": "1",
-  "disableGraphs": true,
-  "socialDist": true,
+  "disableGraphs": false,
+  "testDelay": "5",
+  "socialDist": false,
   "renderLen": "10",
-  "infectedNum": "12",
+  "infectedNum": "34",
   "agentSize": "10",
+  "testRela": "70",
   "gaussMov": true,
   "STD_DEV": "1",
   "sReaction": "3",
-  "infChance": "50"
+  "infChance": "20"
 }
