Implement infection testing and quarantine systems

--- a/epidemicSimulatorV2/data/settings.json
+++ b/epidemicSimulatorV2/data/settings.json
@@ -1,20 +1,21 @@
 {
+  "infTesting": true,
   "MEAN": "3",
   "sDistance": "2",
   "sToughness": "50",
   "deathChance": "30",
   "renderEngine": false,
-  "susceptibleNum": "380",
+  "susceptibleNum": "85",
   "angleChange": "10",
   "recChance": "50",
   "fixedSpeed": "1",
   "disableGraphs": false,
-  "testDelay": "5",
+  "testDelay": "10",
   "socialDist": false,
   "renderLen": "10",
-  "infectedNum": "34",
+  "infectedNum": "31",
   "agentSize": "10",
-  "testRela": "70",
+  "testRela": "100",
   "gaussMov": true,
   "STD_DEV": "1",
   "sReaction": "3",
