--- a/epidemicSimulatorV2/data/settings.json
+++ b/epidemicSimulatorV2/data/settings.json
@@ -1,23 +1,23 @@
 {
-  "infTesting": true,
+  "infTesting": false,
   "MEAN": "3",
-  "sDistance": "2",
+  "sDistance": "5",
   "sToughness": "50",
-  "deathChance": "30",
+  "deathChance": "50",
   "renderEngine": false,
-  "susceptibleNum": "85",
+  "susceptibleNum": "400",
   "angleChange": "10",
-  "recChance": "50",
+  "recChance": "10",
   "fixedSpeed": "1",
   "disableGraphs": false,
-  "testDelay": "10",
+  "testDelay": "1",
   "socialDist": false,
   "renderLen": "10",
   "infectedNum": "31",
   "agentSize": "10",
-  "testRela": "100",
+  "testRela": "70",
   "gaussMov": true,
   "STD_DEV": "1",
   "sReaction": "3",
-  "infChance": "20"
+  "infChance": "60"
 }
