Fixes #6, time now stops ticking when the simulation is paused-2

--- a/epidemicSimulatorV2/data/settings.json
+++ b/epidemicSimulatorV2/data/settings.json
@@ -5,15 +5,15 @@
   "sToughness": "50",
   "deathChance": "50",
   "renderEngine": false,
-  "susceptibleNum": "400",
+  "susceptibleNum": "5",
   "angleChange": "10",
   "recChance": "10",
   "fixedSpeed": "1",
-  "disableGraphs": false,
+  "disableGraphs": true,
   "testDelay": "1",
   "socialDist": false,
   "renderLen": "10",
-  "infectedNum": "31",
+  "infectedNum": "234",
   "agentSize": "10",
   "testRela": "70",
   "gaussMov": true,
