Implement infection in simRender

--- a/epidemicSimulatorV2/data/settings.json
+++ b/epidemicSimulatorV2/data/settings.json
@@ -1,23 +1,23 @@
 {
   "infTesting": false,
   "MEAN": "3",
-  "sDistance": "5",
+  "sDistance": "2",
   "sToughness": "50",
-  "deathChance": "50",
-  "renderEngine": false,
-  "susceptibleNum": "5",
+  "deathChance": "30",
+  "renderEngine": true,
+  "susceptibleNum": "200",
   "angleChange": "10",
-  "recChance": "10",
+  "recChance": "50",
   "fixedSpeed": "1",
-  "disableGraphs": true,
-  "testDelay": "1",
+  "disableGraphs": false,
+  "testDelay": "5",
   "socialDist": false,
-  "renderLen": "10",
-  "infectedNum": "234",
+  "renderLen": "600",
+  "infectedNum": "81",
   "agentSize": "10",
   "testRela": "70",
   "gaussMov": true,
   "STD_DEV": "1",
   "sReaction": "3",
-  "infChance": "60"
+  "infChance": "50"
 }
