Added error dialog box when mising .NET Runtime

--- a/epidemicSimulatorV2/data/settings.json
+++ b/epidemicSimulatorV2/data/settings.json
@@ -4,16 +4,16 @@
   "sDistance": "2",
   "sToughness": "50",
   "deathChance": "30",
-  "renderEngine": false,
-  "susceptibleNum": "387",
+  "renderEngine": true,
+  "susceptibleNum": "391",
   "angleChange": "10",
   "recChance": "50",
   "fixedSpeed": "1",
   "disableGraphs": true,
   "testDelay": "5",
   "socialDist": false,
-  "renderLen": "10",
-  "infectedNum": "25",
+  "renderLen": "400",
+  "infectedNum": "20",
   "agentSize": "10",
   "testRela": "70",
   "gaussMov": true,
