Add save graphs option

--- a/epidemicSimulatorV2/data/settings.json
+++ b/epidemicSimulatorV2/data/settings.json
@@ -1,19 +1,20 @@
 {
-  "infTesting": true,
+  "infTesting": false,
   "MEAN": "3",
   "sDistance": "2",
   "sToughness": "50",
   "deathChance": "30",
-  "renderEngine": true,
-  "susceptibleNum": "391",
+  "renderEngine": false,
+  "susceptibleNum": "365",
+  "saveGraphs": false,
   "angleChange": "10",
   "recChance": "50",
   "fixedSpeed": "1",
-  "disableGraphs": true,
+  "disableGraphs": false,
   "testDelay": "5",
   "socialDist": false,
-  "renderLen": "400",
-  "infectedNum": "20",
+  "renderLen": "10",
+  "infectedNum": "35",
   "agentSize": "10",
   "testRela": "70",
   "gaussMov": true,
