Heavily optimized graph rendering using separate graphic buffers. Fixes #7

--- a/epidemicSimulatorV2/data/settings.json
+++ b/epidemicSimulatorV2/data/settings.json
@@ -5,16 +5,16 @@
   "sToughness": "50",
   "deathChance": "30",
   "renderEngine": false,
-  "susceptibleNum": "2",
+  "susceptibleNum": "400",
   "saveGraphs": false,
   "angleChange": "10",
   "recChance": "50",
   "fixedSpeed": "1",
-  "disableGraphs": true,
+  "disableGraphs": false,
   "testDelay": "5",
   "socialDist": false,
   "renderLen": "10",
-  "infectedNum": "1",
+  "infectedNum": "20",
   "agentSize": "10",
   "testRela": "70",
   "gaussMov": true,
